--- a/k8s/loadbalancer.yaml
+++ b/k8s/loadbalancer.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: node-lb-service
+  labels:
+    app: nodeapp
 spec:
+  ports:
+    - protocol : TCP
+      port: 80
+      targetPort: 8000
+
   selector:
     app: nodeapp
-  ports:
-    - port: 80
-      targetPort: 80
   type: LoadBalancer
